config/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: admin-test
    env: test
  name:  admin-test
  namespace: test
spec:
  tls:
  - hosts:
    -  admin-test.com
  rules:
  - host: admin-test.com
    http:
      paths:
      - backend:
          serviceName: admin-test
          servicePort: 8182
        path: /
status:
  loadBalancer:
    ingress:
    - {}
